plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'jacoco'
	id 'checkstyle'
}

group = 'org.bomartin'
// Version is inherited from root project's Git tag-based versioning
version = rootProject.version

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.zonky.test:embedded-postgres:2.0.7'
	testImplementation 'io.zonky.test:embedded-database-spring-test:2.5.1'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
	useJUnitPlatform()
	
	// Show test results in the console
	testLogging {
		events "passed", "skipped", "failed"
		showExceptions true
		showCauses true
		showStackTraces true
		
		// Show test results as they happen
		showStandardStreams = true
		
		// Add summary after tests complete
		afterSuite { desc, result ->
			if (!desc.parent) { // will match the outermost suite
				def output = "Tests: ${result.testCount} total, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped"
				def padding = 80 - output.length()
				padding = padding < 0 ? 0 : padding
				println "\n" + "-" * 80
				print " " * (padding / 2) + output
				println "\n" + "-" * 80
			}
		}
	}
	
	// Generate code coverage report after tests
	finalizedBy jacocoTestReport
}

jacoco {
	toolVersion = "0.8.12"
}

jacocoTestReport {
	dependsOn test

	reports {
		xml.required = true  // For SonarQube/SonarCloud integration
		html.required = true // For human-readable reports
		csv.required = false
	}

	doLast {
		println "\n" + "=" * 80
		println "Code coverage report generated:"
		println "  HTML: file://${project.buildDir}/reports/jacoco/test/html/index.html"
		println "  XML:  ${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
		println "=" * 80
	}
}

checkstyle {
	toolVersion = '10.22.0'
	configFile = file("${projectDir}/config/checkstyle/checkstyle.xml")
	// Allow warnings without failing the build initially
	// TODO: Set maxWarnings = 0 and ignoreFailures = false once all violations are fixed
	maxWarnings = Integer.MAX_VALUE
	maxErrors = 0
	// Don't fail the build on violations yet, just report them
	ignoreFailures = true
}

tasks.withType(Checkstyle) {
	reports {
		xml.required = false
		html.required = true
	}

	// Show violations in the console
	doLast {
		def reportFile = reports.html.outputLocation.asFile.get()
		if (reportFile.exists()) {
			def reportDir = reportFile.parentFile
			println "\n" + "=" * 80
			println "Checkstyle report generated:"
			println "  HTML: file://${reportFile}"
			println "=" * 80
		}
	}
}
